# playrix-test-task

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  ruff.toml  settings.py
src/: app.py
src/repositories/: google_sheets.py  gridly.py
src/services/: synchronize_data.py
src/utils/: http.py  mappers.py  setup_logger.py
src/utils/google_sheets/: get_client.py
src/utils/gridly/: get_client.py
tests/: conftest.py
tests/data/: get_column_names_mapping.json  get_google_sheets_records.json  get_grid.json  get_gridly_records_actual.json  get_gridly_records_outdated.json
tests/services/: test_synchronize_data.py
tests/utils/: test_mappers.py
